// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Button-group input-group renders correctly 1`] = `
<jest>
  <div
    class="btn-group btn-group-md"
    role="group"
  >
    <input
      class="form-check-input btn-check"
      id="submit-1"
      type="checkbox"
    />
    <label
      class="form-check-label btn btn-outline-primary"
      for="submit-1"
    >
      I am a input field
    </label>
    <input
      class="form-check-input btn-check"
      id="submit-2"
      type="checkbox"
    />
    <label
      class="form-check-label btn btn-secondary"
      for="submit-2"
    >
      I am a input field
    </label>
    <input
      class="form-check-input btn-check"
      id="submit-3"
      type="checkbox"
    />
    <label
      class="form-check-label btn btn-primary"
      for="submit-3"
    >
      I am a input field
    </label>
    <input
      class="form-check-input btn-check"
      id="submit-4"
      type="checkbox"
    />
    <label
      class="form-check-label btn btn-info"
      for="submit-4"
    >
      I am a input field
    </label>
  </div>
</jest>
`;

exports[`OE - Button-group lg renders correctly 1`] = `
<jest>
  <div
    class="btn-group btn-group-lg"
    role="group"
  >
    <button
      class="bcl-btn btn btn-danger btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-primary btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-outline-dark btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-warning btn-md"
      type="button"
    >
      I am a button
    </button>
  </div>
</jest>
`;

exports[`OE - Button-group md renders correctly 1`] = `
<jest>
  <div
    class="btn-group btn-group-md"
    role="group"
  >
    <button
      class="bcl-btn btn btn-danger btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-primary btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-outline-dark btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-warning btn-md"
      type="button"
    >
      I am a button
    </button>
  </div>
</jest>
`;

exports[`OE - Button-group sm renders correctly 1`] = `
<jest>
  <div
    class="btn-group btn-group-sm"
    role="group"
  >
    <button
      class="bcl-btn btn btn-danger btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-primary btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-outline-dark btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-warning btn-md"
      type="button"
    >
      I am a button
    </button>
  </div>
</jest>
`;

exports[`OE - Button-group toolbar renders correctly 1`] = `
<jest>
  <div
    aria-label="Text here"
    class="btn-toolbar"
    role="toolbar"
  >
    <div
      class="me-2 btn-group btn-group-md"
      role="group"
    >
      <input
        class="form-check-input btn-check"
        id="submit-1"
        type="checkbox"
      />
      <label
        class="form-check-label btn btn-outline-primary"
        for="submit-1"
      >
        I am a input field
      </label>
      <button
        class="bcl-btn btn btn-primary btn-md"
        type="button"
      >
        I am a button
      </button>
      <input
        class="form-check-input btn-check"
        id="submit-3"
        type="checkbox"
      />
      <label
        class="form-check-label btn btn-warning"
        for="submit-3"
      >
        I am a input field
      </label>
      <button
        class="bcl-btn btn btn-outline-dark btn-md"
        type="button"
      >
        I am a button
      </button>
    </div>
    <div
      class="me-2 btn-group btn-group-md"
      role="group"
    >
      <input
        class="form-check-input btn-check"
        id="submit-2"
        type="checkbox"
      />
      <label
        class="form-check-label btn btn-secondary"
        for="submit-2"
      >
        I am a input field
      </label>
      <button
        class="bcl-btn btn btn-danger btn-md"
        type="button"
      >
        I am a button
      </button>
      <button
        class="bcl-btn btn btn-warning btn-md"
        type="button"
      >
        I am a button
      </button>
      <input
        class="form-check-input btn-check"
        id="submit-4"
        type="checkbox"
      />
      <label
        class="form-check-label btn btn-info"
        for="submit-4"
      >
        I am a input field
      </label>
    </div>
  </div>
</jest>
`;

exports[`OE - Button-group vertical renders correctly 1`] = `
<jest>
  <div
    class="btn-group-vertical btn-group-md"
    role="group"
  >
    <button
      class="bcl-btn btn btn-danger btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-primary btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-outline-dark btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-warning btn-md"
      type="button"
    >
      I am a button
    </button>
  </div>
</jest>
`;

exports[`OE - Button-group with aria label renders correctly 1`] = `
<jest>
  <div
    aria-label="changed aria label"
    class="btn-group btn-group-md"
    role="group"
  >
    <button
      class="bcl-btn btn btn-danger btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-primary btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-outline-dark btn-md"
      type="button"
    >
      I am a button
    </button>
    <button
      class="bcl-btn btn btn-warning btn-md"
      type="button"
    >
      I am a button
    </button>
  </div>
</jest>
`;
